# AuroBOT

./: Cargo.toml
src/: calc.rs  main.rs  voice_tracker.rs
